--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.15.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.511.0",
     "match-sorter": "^8.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
