--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "framer-motion": "^12.15.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.511.0",
@@ -21,7 +22,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.1",
     "sort-by": "^1.2.0",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
